<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageview_cover"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/nophoto" />

    <LinearLayout
        android:id="@+id/linearlayout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_cover"
        android:layout_marginBottom="3dp"
        android:background="@color/darkblue_alpha"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="Thomb Raider"
            android:textSize="@dimen/xbigtext"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_realeasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/platformactivity_realeasedate"
            android:textSize="@dimen/smalltext"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/smalltext" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearlayout_header"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@color/darkblue_alpha"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/platformactivity_whattoplay"
            android:textSize="@dimen/bigtext" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_games"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkblue_alpha"
            android:visibility="visible">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_nogame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkblue_alpha"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/platformactivity_anygame"
            android:textSize="@dimen/bigtext"
            android:textStyle="italic"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textview_failuredTolist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkblue_alpha"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/platformactivity_failuretolistgames"
            android:textSize="@dimen/bigtext"
            android:textStyle="italic"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearlayout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkblue_alpha"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageview_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/imageview_cover"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-40dp"
        android:elevation="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/nophoto" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent" />

</RelativeLayout>